--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.deltation.toon-shader": "https://github.com/Delt06/urp-toon-shader.git?path=Packages/com.deltation.toon-shader",
+    "com.unity.ai.navigation": "1.0.0-exp.4",
     "com.unity.cinemachine": "2.8.4",
     "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.probuilder": "5.0.4",
